--- a/src/app/order/product-list/product-list.component.html
+++ b/src/app/order/product-list/product-list.component.html
@@ -29,10 +29,9 @@
        <ng-container *ngFor="let item of items" >
         <div class="col-md-4">
           <div class="card service-card">
-              <a [routerLink]="['/detail', item.id]"  rel="noopener noreferrer">
-                  <img src="{{item.img}}"
-                       alt="Visa Mỹ" class="card-img-top">
-              </a>
+            <a [routerLink]="['/detail', item.id]" rel="noopener noreferrer">
+              <img [src]="'data:image/jpeg;base64,' + item.img" alt="Visa Mỹ" class="card-img-top">
+           </a>
               <div class="card-body">
                   <h5 class="card-title">{{item.name}}</h5>
                   <p class="card-text">
