--- a/src/app/order/product-detail/product-detail.component.html
+++ b/src/app/order/product-detail/product-detail.component.html
@@ -5,7 +5,7 @@
           <div class="carousel-inner">
             <ng-container *ngFor="let item of product.sliders; let i = index">
               <div class="carousel-item" [class.active]="i === 0">
-                <img [src]="item" class="d-block w-100 rounded shadow" alt="Product Image {{ i + 1 }}">
+                <img [src]="'data:image/jpeg;base64,' + item" class="d-block w-100 rounded shadow" alt="Product Image {{ i + 1 }}">
               </div>
             </ng-container>
             <ng-container *ngIf="product.sliders == null">
